Add file and system operations modules with step executor and UI builder
- Created `file_operations.py` for handling file and directory operations.
- Implemented `system_operations.py` for executing system commands and managing processes.
- Developed `step_executor.py` to execute various test steps based on type.
- Added `step_ui_builder.py` for building UI components for different step types.
- Introduced `__init__.py` to organize step types module.
- Included `requirements.txt` for additional dependencies (psutil).

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 autotestgui/__pycache__/test_step.cpython-313.pyc
+TestReports/*
+test_summary_parallel.txt
+test_summary.txt
+autotestgui/__pycache__/*
